--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "type": "module",
     "scripts": {
         "build": "tsc",
-        "ci": "pnpm run build && npm run check-format && npm run check-exports",
+        "ci": "npm run build && npm run check-format && npm run check-exports",
         "format": "prettier --write .",
         "check-format": "prettier --check .",
         "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
